enabled instepect pull

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<div class="topbar-left">
 						<ul>
 							<li><a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
-							<li><a href="javascript:;"><i class="fa fa-envelope-o"></i>Support@website.com</a></li>
+							<li><a href="javascript:;"><i class="fa fa-envelope-o"></i>enquiry@rcbc.edu.ng</a></li>
 						</ul>
 					</div>
 					<div class="topbar-right">
@@ -75,7 +75,7 @@
 									<option data-icon="flag flag-us">English US</option>
 								</select>
 							</li>
-							<li><a href="login.html">Login</a></li>
+							<!-- <li><a href="login.html">Login</a></li> -->
 							<li><a href="register.html">Register</a></li>
 						</ul>
 					</div>
@@ -174,6 +174,13 @@
 									<li class="add-menu-right">
 										<img src="assets/images/adv/adv.jpg" alt=""/>
 									</li>
+								</ul>
+							</li>
+							<li><a href="javascript:;">Portal <i class="fa fa-chevron-down"></i></a>
+								<ul class="sub-menu">
+									<li><a href="login.html">Applicants Portal</a></li>
+									<li><a href="login.html">Student Portal</a></li>
+									<li><a href="login.html">Staff Portal</a></li>
 								</ul>
 							</li>
 							<li><a href="javascript:;">Blog <i class="fa fa-chevron-down"></i></a>
@@ -300,7 +307,7 @@
 								data-paddingbottom="[10,10,10,10]"
 								data-paddingleft="[0,0,0,0]"
 								style="z-index: 6; font-family:rubik; font-weight:700; text-align:center; white-space: normal;">
-									Welcome To University
+									Welcome To Redeemed Christian Bible College
 							</div>
 
 							<!-- LAYER NR. 3 -->
@@ -344,7 +351,7 @@
 								data-paddingbottom="[0,0,0,0]"
 								data-paddingleft="[0,0,0,0]"
 								style="z-index: 7; text-transform:capitalize; white-space: unset; color:#fff; font-family:rubik; font-size:18px; line-height:28px; font-weight:400;">
-									 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the
+								A remarkable institute offering exceptional theological training infused with a touch of excellence.
 							</div>
 							<!-- LAYER NR. 4 -->
 							<div class="tp-caption Newspaper-Button rev-btn " 
@@ -565,7 +572,7 @@
 									<div class="feature-box-sm radius bg-white">
 										<i class="fa fa-bank text-primary"></i>
 									</div>
-									<h4><a href="#">Best Industry Leaders</a></h4>
+									<h4><a href="#">Campuses around the world</a></h4>
 									<a href="#" class="btn radius-xl">View More</a>
 								</div>
 							</div>
@@ -579,7 +586,7 @@
 									<div class="feature-box-sm radius bg-white">
 										<i class="fa fa-book text-primary"></i>
 									</div>
-									<h4><a href="#">Learn Courses Online</a></h4>
+									<h4><a href="#">E-learning</a></h4>
 									<a href="#" class="btn radius-xl">View More</a>
 								</div>
 							</div>
@@ -754,17 +761,41 @@
 							<div class="col-md-4 col-sm-6">
 								<div class="cours-search-bx m-b30">
 									<div class="icon-box">
-										<h3><i class="ti-user"></i><span class="counter">5</span>M</h3>
+										<h3><i class="ti-home"></i><span class="counter">19</span></h3>
 									</div>
-									<span class="cours-search-text">Over 5 million student</span>
+									<span class="cours-search-text">19 Courses.</span>
 								</div>
 							</div>
 							<div class="col-md-4 col-sm-6">
 								<div class="cours-search-bx m-b30">
 									<div class="icon-box">
-										<h3><i class="ti-book"></i><span class="counter">30</span>K</h3>
+										<h3><i class="ti-layout-media-center-alt"></i><span class="counter">8</span></h3>
 									</div>
-									<span class="cours-search-text">30,000 Courses.</span>
+									<span class="cours-search-text">8 Departments.</span>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-6">
+								<div class="cours-search-bx m-b30">
+									<div class="icon-box">
+										<h3><i class="ti-user"></i><span class="counter">3</span>k</h3>
+									</div>
+									<span class="cours-search-text">Over 3 thousand student</span>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-6">
+								<div class="cours-search-bx m-b30">
+									<div class="icon-box">
+										<h3><i class="ti-book"></i><span class="counter">41</span></h3>
+									</div>
+									<span class="cours-search-text">41 Courses.</span>
+								</div>
+							</div>
+							<div class="col-md-4 col-sm-6">
+								<div class="cours-search-bx m-b30">
+									<div class="icon-box">
+										<h3><i class="ti-view-list"></i><span class="counter">1</span>k</h3>
+									</div>
+									<span class="cours-search-text">Over 1 thousand campuses</span>
 								</div>
 							</div>
 							<div class="col-md-4 col-sm-12">
@@ -993,7 +1024,7 @@
 				<div class="container">
 					<div class="d-flex align-items-stretch">
 						<div class="pt-logo mr-auto">
-							<a href="index.html"><img src="assets/images/logo-white.png" alt=""/></a>
+							<a href="index.html"><img src="assets/images/REDEEMED-light.png" alt="" width="30%"/></a>
 						</div>
 						<div class="pt-social-link">
 							<ul class="list-inline m-a0">
@@ -1117,11 +1148,11 @@
 <!-- Slider revolution 5.0 Extensions  (Load Extensions only on Local File Systems !  The following part can be removed on Server for On Demand Loading) -->
 <script src="assets/vendors/revolution/js/extensions/revolution.extension.actions.min.js"></script>
 <script src="assets/vendors/revolution/js/extensions/revolution.extension.carousel.min.js"></script>
-<script src="assets/vendors/revolution/js/extensions/revolution.extension.kenburn.min.js"></script>
+<!-- <script src="assets/vendors/revolution/js/extensions/revolution.extension.kenburn.min.js"></script> -->
 <script src="assets/vendors/revolution/js/extensions/revolution.extension.layeranimation.min.js"></script>
 <script src="assets/vendors/revolution/js/extensions/revolution.extension.migration.min.js"></script>
 <script src="assets/vendors/revolution/js/extensions/revolution.extension.navigation.min.js"></script>
-<script src="assets/vendors/revolution/js/extensions/revolution.extension.parallax.min.js"></script>
+<!-- <script src="assets/vendors/revolution/js/extensions/revolution.extension.parallax.min.js"></script> -->
 <script src="assets/vendors/revolution/js/extensions/revolution.extension.slideanims.min.js"></script>
 <script src="assets/vendors/revolution/js/extensions/revolution.extension.video.min.js"></script>
 <script>
