--- a/login.html
+++ b/login.html
@@ -53,30 +53,30 @@
 <div class="page-wraper">
 	<div id="loading-icon-bx"></div>
 	<div class="account-form">
-		<div class="account-head" style="background-image:url(assets/images/background/bg2.jpg);">
-			<a href="index.html"><img src="assets/images/logo-white-2.png" alt=""></a>
+		<div class="account-head" style="background:url(assets/images/background/bg2.jpg)  !important;">
+			<a href="index.html"><img src="assets/images/REDEEMED-light.png" width="70%" alt=""></a>
 		</div>
 		<div class="account-form-inner">
 			<div class="account-container">
 				<div class="heading-bx left">
 					<h2 class="title-head">Login to your <span>Account</span></h2>
-					<p>Don't have an account? <a href="register.html">Create one here</a></p>
+					<p>Don't have an account? <a href="register.html" style="text-decoration: none; color: #2a166f;">Create one here</a></p>
 				</div>	
 				<form class="contact-bx">
 					<div class="row placeani">
 						<div class="col-lg-12">
 							<div class="form-group">
 								<div class="input-group">
-									<label>Your Name</label>
-									<input name="dzName" type="text" required="" class="form-control">
+									<!-- <label>Your Name</label> -->
+									<input name="dzName" type="text" required="" class="form-control" style="padding: 0 10px;" placeholder="Your Name">
 								</div>
 							</div>
 						</div>
 						<div class="col-lg-12">
 							<div class="form-group">
 								<div class="input-group"> 
-									<label>Your Password</label>
-									<input name="dzEmail" type="password" class="form-control" required="">
+									<!-- <label>Your Password</label> -->
+									<input name="dzEmail" type="password" class="form-control" required="" style="padding: 0 10px;" placeholder="Your Password">
 								</div>
 							</div>
 						</div>
@@ -92,13 +92,13 @@
 						<div class="col-lg-12 m-b30">
 							<button name="submit" type="submit" value="Submit" class="btn button-md">Login</button>
 						</div>
-						<div class="col-lg-12">
+						<!-- <div class="col-lg-12">
 							<h6>Login with Social media</h6>
 							<div class="d-flex">
 								<a class="btn flex-fill m-r5 facebook" href="#"><i class="fa fa-facebook"></i>Facebook</a>
 								<a class="btn flex-fill m-l5 google-plus" href="#"><i class="fa fa-google-plus"></i>Google Plus</a>
 							</div>
-						</div>
+						</div> -->
 					</div>
 				</form>
 			</div>
