--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
 <div class="page-wraper">
 	<div id="loading-icon-bx"></div>
 	<div class="account-form">
-		<div class="account-head" style="background:url(assets/images/background/bg2.jpg)  !important;">
+		<div class="account-head" style="background-image:url(assets/images/background/bg2.jpg);">
 			<a href="index.html"><img src="assets/images/REDEEMED-light.png" width="70%" alt=""></a>
 		</div>
 		<div class="account-form-inner">
