--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
 									<li><a href="error-404.html">404 Page</a></li>
 								</ul>
 							</li>
-							<li class="add-mega-menu"><a href="javascript:;">Our Courses <i class="fa fa-chevron-down"></i></a>
+							<li class="add-mega-menu"><a href="javascript:;">Schools <i class="fa fa-chevron-down"></i></a>
 								<ul class="sub-menu add-menu">
 									<li class="add-menu-left">
-										<h5 class="menu-adv-title">Our Courses</h5>
+										<h5 class="menu-adv-title">Schools</h5>
 										<ul>
-											<li><a href="courses.html">Courses </a></li>
+											<li><a href="schools.html">Schools </a></li>
 											<li><a href="courses-details.html">Courses Details</a></li>
 											<li><a href="profile.html">Instructor Profile</a></li>
 											<li><a href="event.html">Upcoming Event</a></li>
