--- a/courses.html
+++ b/courses.html
@@ -60,7 +60,7 @@
 				<div class="row d-flex justify-content-between">
 					<div class="topbar-left">
 						<ul>
-							<li><a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
+							<li><a href="faq.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
 							<li><a href="javascript:;"><i class="fa fa-envelope-o"></i>Support@website.com</a></li>
 						</ul>
 					</div>
@@ -128,7 +128,7 @@
 								<ul class="sub-menu">
 									<li><a href="javascript:;">About<i class="fa fa-angle-right"></i></a>
 										<ul class="sub-menu">
-											<li><a href="about-1.html">About 1</a></li>
+											<li><a href="about.html">About 1</a></li>
 											<li><a href="about-2.html">About 2</a></li>
 										</ul>
 									</li>
@@ -140,7 +140,7 @@
 									</li>
 									<li><a href="javascript:;">FAQ's<i class="fa fa-angle-right"></i></a>
 										<ul class="sub-menu">
-											<li><a href="faq-1.html">FAQ's 1</a></li>
+											<li><a href="faq.html">FAQ's 1</a></li>
 											<li><a href="faq-2.html">FAQ's 2</a></li>
 										</ul>
 									</li>
@@ -630,8 +630,8 @@
 									<h5 class="footer-title">Company</h5>
 									<ul>
 										<li><a href="index.html">Home</a></li>
-										<li><a href="about-1.html">About</a></li>
-										<li><a href="faq-1.html">FAQs</a></li>
+										<li><a href="about.html">About</a></li>
+										<li><a href="faq.html">FAQs</a></li>
 										<li><a href="contact-1.html">Contact</a></li>
 									</ul>
 								</div>
