--- a/faq.html
+++ b/faq.html
@@ -51,15 +51,14 @@
 <body id="bg">
 <div class="page-wraper">
 <div id="loading-icon-bx"></div>
-
-    <!-- Header Top ==== -->
+	<!-- Header Top ==== -->
     <header class="header rs-nav">
 		<div class="top-bar">
 			<div class="container">
 				<div class="row d-flex justify-content-between">
 					<div class="topbar-left">
 						<ul>
-							<li><a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
+							<li><a href="faq.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
 							<li><a href="javascript:;"><i class="fa fa-envelope-o"></i>Support@website.com</a></li>
 						</ul>
 					</div>
@@ -127,7 +126,7 @@
 								<ul class="sub-menu">
 									<li><a href="javascript:;">About<i class="fa fa-angle-right"></i></a>
 										<ul class="sub-menu">
-											<li><a href="about-1.html">About 1</a></li>
+											<li><a href="about.html">About 1</a></li>
 											<li><a href="about-2.html">About 2</a></li>
 										</ul>
 									</li>
@@ -139,7 +138,7 @@
 									</li>
 									<li><a href="javascript:;">FAQ's<i class="fa fa-angle-right"></i></a>
 										<ul class="sub-menu">
-											<li><a href="faq-1.html">FAQ's 1</a></li>
+											<li><a href="faq.html">FAQ's 1</a></li>
 											<li><a href="faq-2.html">FAQ's 2</a></li>
 										</ul>
 									</li>
@@ -221,10 +220,10 @@
     <!-- Content -->
     <div class="page-content bg-white">
         <!-- inner page banner -->
-        <div class="page-banner ovbl-dark" style="background-image:url(assets/images/banner/banner3.jpg);">
+        <div class="page-banner ovbl-dark" style="background-image:url(assets/images/banner/banner1.jpg);">
             <div class="container">
                 <div class="page-banner-entry">
-                    <h1 class="text-white">Contact Us 1</h1>
+                    <h1 class="text-white">Frequently Asked Questions</h1>
 				 </div>
             </div>
         </div>
@@ -233,105 +232,196 @@
 			<div class="container">
 				<ul class="list-inline">
 					<li><a href="#">Home</a></li>
-					<li>Contact Us 1</li>
+					<li>Faqs 1</li>
 				</ul>
 			</div>
 		</div>
 		<!-- Breadcrumb row END -->
-	
-        <!-- inner page banner -->
-        <div class="page-banner contact-page section-sp2">
-            <div class="container">
-                <div class="row">
-					<div class="col-lg-5 col-md-5 m-b30">
-						<div class="bg-primary text-white contact-info-bx">
-							<h2 class="m-b10 title-head">Contact <span>Information</span></h2>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-							<div class="widget widget_getintuch">	
-								<ul>
-									<li><i class="ti-location-pin"></i>75k Newcastle St. Ponte Vedra Beach, FL 309382 New York</li>
-									<li><i class="ti-mobile"></i>0800-123456 (24/7 Support Line)</li>
-									<li><i class="ti-email"></i>info@example.com</li>
-								</ul>
+        <!-- contact area -->
+        <div class="content-block">
+            <!-- Your Faq -->
+            <div class="section-area section-sp1">
+                <div class="container">
+					<div class="row">
+						<div class="col-lg-8 col-md-12">
+							<div class="heading-bx left">
+								<h2 class="m-b10 title-head">Asked <span> Questions</span></h2>
 							</div>
-							<h5 class="m-t0 m-b20">Follow Us</h5>
-							<ul class="list-inline contact-social-bx">
-								<li><a href="#" class="btn outline radius-xl"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="#" class="btn outline radius-xl"><i class="fa fa-twitter"></i></a></li>
-								<li><a href="#" class="btn outline radius-xl"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="#" class="btn outline radius-xl"><i class="fa fa-google-plus"></i></a></li>
-							</ul>
+							<p class="m-b10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
+							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
+							<div class="ttr-accordion m-b30 faq-bx" id="accordion1">
+								<div class="panel">
+									<div class="acod-head">
+										<h6 class="acod-title"> 
+											<a data-toggle="collapse" href="#faq1" class="collapsed" data-parent="#faq1">
+											Why won't my payment go through? </a> </h6>
+									</div>
+									<div id="faq1" class="acod-body collapse">
+										<div class="acod-content">Web design aorem apsum dolor sit amet, adipiscing elit, sed diam nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+									</div>
+								</div>
+								<div class="panel">
+									<div class="acod-head">
+										<h6 class="acod-title"> 
+											<a data-toggle="collapse" href="#faq2" class="collapsed" data-parent="#faq2">
+											How do I get a refund?</a> </h6>
+									</div>
+									<div id="faq2" class="acod-body collapse">
+										<div class="acod-content">Graphic design aorem apsum dolor sit amet, adipiscing elit, sed diam nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+									</div>
+								</div>
+								<div class="panel">
+									<div class="acod-head">
+										<h6 class="acod-title"> 
+											<a data-toggle="collapse"  href="#faq3" class="collapsed"  data-parent="#faq3">
+											How do I redeem a coupon? </a> </h6>
+									</div>
+									<div id="faq3" class="acod-body collapse">
+										<div class="acod-content">Developement aorem apsum dolor sit amet, adipiscing elit, sed diam nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+									</div>
+								</div>
+								<div class="panel">
+									<div class="acod-head">
+										<h6 class="acod-title"> 
+											<a data-toggle="collapse"  href="#faq4" class="collapsed"  data-parent="#faq4">
+											Why aren't my courses showing in my account? </a> </h6>
+									</div>
+									<div id="faq4" class="acod-body collapse">
+										<div class="acod-content">Developement aorem apsum dolor sit amet, adipiscing elit, sed diam nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+									</div>
+								</div>
+								<div class="panel">
+									<div class="acod-head">
+										<h6 class="acod-title"> 
+											<a data-toggle="collapse"  href="#faq5" class="collapsed"  data-parent="#faq5">
+											Changing account name </a> </h6>
+									</div>
+									<div id="faq5" class="acod-body collapse">
+										<div class="acod-content">Developement aorem apsum dolor sit amet, adipiscing elit, sed diam nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+									</div>
+								</div>
+							</div>
+							<p class="m-b10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
+							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it.</p>
+							<div class="row">
+								<div class="col-lg-6 col-md-6 col-sm-6 m-b30">
+									<div class="feature-container">
+										<div class="feature-md text-white m-b20">
+											<a href="#" class="icon-cell"><img src="assets/images/icon/icon1.png" alt=""></a> 
+										</div>
+										<div class="icon-content">
+											<h5 class="ttr-tilte">Our Philosophy</h5>
+											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6 m-b30">
+									<div class="feature-container">
+										<div class="feature-md text-white m-b20">
+											<a href="#" class="icon-cell"><img src="assets/images/icon/icon2.png" alt=""></a> 
+										</div>
+										<div class="icon-content">
+											<h5 class="ttr-tilte">Kingster's Principle</h5>
+											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6 m-b30">
+									<div class="feature-container">
+										<div class="feature-md text-white m-b20">
+											<a href="#" class="icon-cell"><img src="assets/images/icon/icon3.png" alt=""></a> 
+										</div>
+										<div class="icon-content">
+											<h5 class="ttr-tilte">Key Of Success</h5>
+											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-6 m-b30">
+									<div class="feature-container">
+										<div class="feature-md text-white m-b20">
+											<a href="#" class="icon-cell"><img src="assets/images/icon/icon4.png" alt=""></a> 
+										</div>
+										<div class="icon-content">
+											<h5 class="ttr-tilte">Our Philosophy</h5>
+											<p>Lorem ipsum dolor sit amet, consectetuer adipiscing.</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-md-12">
+							<form class="contact-bx dzForm" action="http://educhamp.themetrades.com/demo/script/contact.php">
+							<div class="dzFormMsg"></div>
+								<div class="heading-bx left">
+									<h2 class="title-head">Get In <span>Touch</span></h2>
+									<p>It is a long established fact that a reader will be distracted by the readable content of a page</p>
+								</div>
+								<div class="row placeani">
+									<div class="col-lg-6 ">
+										<div class="form-group">
+											<div class="input-group">
+												<label>Your Name</label>
+												<input name="dzName" type="text" required class="form-control">
+											</div>
+										</div>
+									</div>
+									<div class="col-lg-6">
+										<div class="form-group">
+											<div class="input-group"> 
+												<label>Your Email Address</label>
+												<input name="dzEmail" type="email" class="form-control" required >
+											</div>
+										</div>
+									</div>
+									<div class="col-lg-6">
+										<div class="form-group">
+											<div class="input-group">
+												<label>Your Phone</label>
+												<input name="dzOther[Phone]" type="text" required class="form-control">
+											</div>
+										</div>
+									</div>
+									<div class="col-lg-6">
+										<div class="form-group">
+											<div class="input-group">
+												<label>Subject</label>
+												<input name="dzOther[Subject]" type="text" required class="form-control">
+											</div>
+										</div>
+									</div>
+									<div class="col-lg-12">
+										<div class="form-group">
+											<div class="input-group">
+												<label>Type Message</label>
+												<textarea name="dzMessage" rows="4" class="form-control" required ></textarea>
+											</div>
+										</div>
+									</div>
+									<div class="col-lg-12">
+										<div class="form-group">
+											<div class="input-group">
+												<div class="g-recaptcha" data-sitekey="6LefsVUUAAAAADBPsLZzsNnETChealv6PYGzv3ZN" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"></div>
+												<input class="form-control d-none" style="display:none;" data-recaptcha="true" required data-error="Please complete the Captcha">
+											</div>
+										</div>
+									</div>
+									<div class="col-lg-12">
+										<button name="submit" type="submit" value="Submit" class="btn button-md"> Send Message</button>
+									</div>
+								</div>
+							</form>
 						</div>
 					</div>
-					<div class="col-lg-7 col-md-7">
-						<form class="contact-bx ajax-form" action="http://educhamp.themetrades.com/demo/assets/script/contact.php">
-						<div class="ajax-message"></div>
-							<div class="heading-bx left">
-								<h2 class="title-head">Get In <span>Touch</span></h2>
-								<p>It is a long established fact that a reader will be distracted by the readable content of a page</p>
-							</div>
-							<div class="row placeani">
-								<div class="col-lg-6">
-									<div class="form-group">
-										<div class="input-group">
-											<label>Your Name</label>
-											<input name="name" type="text" required class="form-control valid-character">
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<div class="input-group"> 
-											<label>Your Email Address</label>
-											<input name="email" type="email" class="form-control" required >
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<div class="input-group">
-											<label>Your Phone</label>
-											<input name="phone" type="text" required class="form-control int-value">
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-6">
-									<div class="form-group">
-										<div class="input-group">
-											<label>Subject</label>
-											<input name="subject" type="text" required class="form-control">
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-12">
-									<div class="form-group">
-										<div class="input-group">
-											<label>Type Message</label>
-											<textarea name="message" rows="4" class="form-control" required ></textarea>
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-12">
-									<div class="form-group">
-										<div class="input-group">
-											<div class="g-recaptcha" data-sitekey="6Lf2gYwUAAAAAJLxwnZTvpJqbYFWqVyzE-8BWhVe" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"></div>
-											<input class="form-control d-none" style="display:none;" data-recaptcha="true" required data-error="Please complete the Captcha">
-										</div>
-									</div>
-								</div>
-								<div class="col-lg-12">
-									<button name="submit" type="submit" value="Submit" class="btn button-md"> Send Message</button>
-								</div>
-							</div>
-						</form>
-					</div>
-				</div>
+					
+                </div>
             </div>
-		</div>
-        <!-- inner page banner END -->
+            <!-- Your Faq End -->
+        </div>
+		<!-- contact area END -->
     </div>
     <!-- Content END-->
-    <!-- Footer ==== -->
+	<!-- Footer ==== -->
     <footer>
         <div class="footer-top">
 			<div class="pt-exebar">
@@ -380,8 +470,8 @@
 									<h5 class="footer-title">Company</h5>
 									<ul>
 										<li><a href="index.html">Home</a></li>
-										<li><a href="about-1.html">About</a></li>
-										<li><a href="faq-1.html">FAQs</a></li>
+										<li><a href="about.html">About</a></li>
+										<li><a href="faq.html">FAQs</a></li>
 										<li><a href="contact-1.html">Contact</a></li>
 									</ul>
 								</div>
@@ -431,13 +521,12 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-12 col-md-12 col-sm-12 text-center"> <a target="_blank" href="https://www.templateshub.net">Templates Hub</a></div>
+                    <div class="col-lg-12 col-md-12 col-sm-12 text-center"><a target="_blank" href="https://www.templateshub.net">Templates Hub</a></div>
                 </div>
             </div>
         </div>
     </footer>
     <!-- Footer END ==== -->
-    <!-- scroll top button -->
     <button class="back-to-top fa fa-chevron-up" ></button>
 </div>
 <!-- External JavaScripts -->
@@ -456,8 +545,6 @@
 <script src="assets/js/functions.js"></script>
 <script src="assets/js/contact.js"></script>
 <script src='assets/vendors/switcher/switcher.js'></script>
-<script src='../../www.google.com/recaptcha/api.js'></script>
 </body>
-
 
 </html>
