--- a/login.html
+++ b/login.html
@@ -54,8 +54,7 @@
 	<div id="loading-icon-bx"></div>
 	<div class="account-form">
 		<div class="account-head" style="background-image:url(assets/images/background/bg2.jpg);">
-			<a href="index.html"><img src="assets/images/REDEEMED-light.png" width="70%" alt=""></a>
-		</div>
+		<a href="index.html"><img src="assets/images/REDEEMED-light.png" alt="" width="30%"/></a>
 		<div class="account-form-inner">
 			<div class="account-container">
 				<div class="heading-bx left">
