update on navbar routers

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<ul>
 								<li><a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
 								<li><a href="javascript:;"><i class="fa fa-envelope-o"></i>enquiry@rcbc.edu.ng</a></li>
-								<li><a href="javascript:;"><i class="fa fa-phone"></i>0810 000 0090</a></li>
+								<li><a href="javascript:;"><i class="fa fa-phone"></i>08030789185</a></li>
 							</ul>
 						</div>
 						<div class="topbar-right">
@@ -125,7 +125,7 @@
 							</div>
 							<ul class="nav navbar-nav">
 								<li class="active"><a href="index.html">Home </a></li>
-								<li><a href="about-1.html">About</a></li>
+								<li><a href="about.html">About</a></li>
 								<li class="add-mega-menu"><a href="javascript:;">Schools <i
 											class="fa fa-chevron-down"></i></a>
 									<ul class="sub-menu add-menu">
@@ -142,9 +142,9 @@
 									</ul>
 								</li>
 								<li><a href="blog-list-sidebar.html">Blog</a></li>
-								<li><a href="faq-1.html">FAQ's</a></li>
+								<li><a href="faq.html">FAQ's</a></li>
 								<li><a href="event.html">Event</a></li>
-								<li><a href="contact-2.html">Contact Us</a></li>
+								<li><a href="contact.html">Contact Us</a></li>
 							</ul>
 							<div class="nav-social-link">
 								<a href="javascript:;"><i class="fa fa-facebook"></i></a>
@@ -912,7 +912,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12 col-md-12 col-sm-12 text-center">© Copyright 2023. All Rights Reserved. |
-							<a target="_blank" href="https://www.templateshub.net"> By CodesPro Solutions</a></div>
+							<a target="_blank" href="https://www.templateshub.net"> By CodesPro Solutions</a>
+						</div>
 					</div>
 				</div>
 			</div>
