--- a/register.html
+++ b/register.html
@@ -67,7 +67,10 @@
       <div class="account-form">
         <div
           class="account-head"
-          style="background-image: url(assets/images/background/bg2.jpg)"
+          style="
+            background-image: url(assets/images/students/reading-in-ilbrary.jpg);
+            background-size: cover;
+          "
         >
           <a href="index.html"
             ><img src="assets/images/REDEEMED-light.png" alt="" width="70%"
