--- a/error-404.html
+++ b/error-404.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- META ============================================= -->
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,27 +10,20 @@
     <meta name="robots" content="" />
 
     <!-- DESCRIPTION -->
-    <meta name="description" content="EduChamp : Education HTML Template" />
+    <meta name="description" content="Redeemed : Christian Bible College: College Portal" />
 
     <!-- OG -->
-    <meta property="og:title" content="EduChamp : Education HTML Template" />
-    <meta
-      property="og:description"
-      content="EduChamp : Education HTML Template"
-    />
+    <meta property="og:title" content="Redeemed : Christian Bible College: College Portal" />
+    <meta property="og:description" content="Redeemed : Christian Bible College: College Portal" />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no" />
 
     <!-- FAVICONS ICON ============================================= -->
     <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="assets/images/favicon.png"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
 
     <!-- PAGE TITLE HERE ============================================= -->
-    <title>EduChamp : Education HTML Template</title>
+    <title>Redeemed : Christian Bible College: College Portal</title>
 
     <!-- MOBILE SPECIFIC ============================================= -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -46,51 +40,37 @@
     <link rel="stylesheet" type="text/css" href="assets/css/typography.css" />
 
     <!-- SHORTCODES ============================================= -->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/shortcodes/shortcodes.css"
-    />
+    <link rel="stylesheet" type="text/css" href="assets/css/shortcodes/shortcodes.css" />
 
     <!-- STYLESHEETS ============================================= -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link
-      class="skin"
-      rel="stylesheet"
-      type="text/css"
-      href="assets/css/color/color-1.css"
-    />
-  </head>
-  <body id="bg">
+    <link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" />
+</head>
+
+<body id="bg">
     <div class="page-wraper">
-      <div id="loading-icon-bx"></div>
-      <div class="account-form">
-        <div
-          class="account-head"
-          style="background-image: url(assets/images/background/bg2.jpg)"
-        >
-          <a href="index.html"
-            ><img src="assets/images/REDEEMED-light.png" alt=""
-          /></a>
-        </div>
-        <div class="account-form-inner">
-          <div class="account-container">
-            <div class="error-page">
-              <h3>Ooopps :(</h3>
-              <h2 class="error-title">404</h2>
-              <h5>The Page you were looking for, couldn't be found.</h5>
-              <p>
-                The page you are looking for might have been removed, had its
-                name changed, or is temporarily unavailable.
-              </p>
-              <div class="">
-                <a href="index.html" class="btn m-r5">Preview</a>
-                <a href="index.html" class="btn outline black">Back To Home</a>
-              </div>
+        <div id="loading-icon-bx"></div>
+        <div class="account-form">
+            <div class="account-head" style="background-image: url(assets/images/background/bg2.jpg)">
+                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt="" /></a>
             </div>
-          </div>
+            <div class="account-form-inner">
+                <div class="account-container">
+                    <div class="error-page">
+                        <h3>Ooopps :(</h3>
+                        <h2 class="error-title">404</h2>
+                        <h5>The Page you were looking for, couldn't be found.</h5>
+                        <p>
+                            The page you are looking for might have been removed, had its name changed, or is temporarily unavailable.
+                        </p>
+                        <div class="">
+                            <a href="index.html" class="btn m-r5">Preview</a>
+                            <a href="index.html" class="btn outline black">Back To Home</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
     <!-- External JavaScripts -->
     <script src="assets/js/jquery.min.js"></script>
@@ -108,5 +88,6 @@
     <script src="assets/js/functions.js"></script>
     <script src="assets/js/contact.js"></script>
     <script src="assets/vendors/switcher/switcher.js"></script>
-  </body>
+</body>
+
 </html>
