--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                                 <div class="tp-caption Newspaper-Subtitle   tp-resizeme" id="slide-100-layer-3" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['top','top','top','top']" data-voffset="['210','210','210','210']" data-width="none"
                                     data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"from":"y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;","mask":"x:0px;y:0px;s:inherit;e:inherit;","speed":1500,"to":"o:1;","delay":1000,"ease":"Power3.easeInOut"},{"delay":"wait","speed":1000,"to":"auto:auto;","mask":"x:0;y:0;s:inherit;e:inherit;","ease":"Power3.easeInOut"}]'
                                     data-textAlign="['left','left','left','left']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: nowrap; color:#fff; font-family:rubik; font-size:18px; font-weight:400;">
-                                    Batter Education For A Better
+
                                 </div>
 
                                 <!-- LAYER NR. 3 -->
@@ -207,7 +207,7 @@
                                 data-rotate="0" data-fstransition="fade" data-fsmasterspeed="1500" data-fsslotamount="7" data-saveperformance="off" data-title="A STUDY ON HAPPINESS" data-param1="" data-param2="" data-param3="" data-param4="" data-param5=""
                                 data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="Science says that Women are generally happier">
                                 <!-- MAIN IMAGE -->
-                                <img src="assets/images/students/content-black-student-with-notepads.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina />
+                                <img src="assets/images/students/reading-in-ilbrary.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina />
 
                                 <!-- LAYER NR. 1 -->
                                 <div class="tp-caption tp-shape tp-shapewrapper " id="slide-200-layer-1" data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']" data-y="['middle','middle','middle','middle']" data-voffset="['0','0','0','0']" data-width="full"
@@ -312,7 +312,7 @@
                         <div class="row">
                             <div class="col-md-12 heading-bx left">
                                 <h2 class="title-head"><span>Courses</span></h2>
-                                <p>It is a long established fact that a reader will be distracted by the readable content of a page</p>
+
                             </div>
                         </div>
                         <div class="row">
@@ -493,7 +493,7 @@
                                 <div class="item">
                                     <div class="event-bx">
                                         <div class="action-box">
-                                            <img src="assets/images/students/two-reading.jpg" alt="">
+                                            <img src="assets/images/students/male-student-reading-.jpg" alt="">
                                         </div>
                                         <div class="info-bx d-flex">
                                             <div>
@@ -517,7 +517,7 @@
                                 <div class="item">
                                     <div class="event-bx">
                                         <div class="action-box">
-                                            <img src="assets/images/students/reading-in-ilbrary.jpg" alt="">
+                                            <img src="assets/images/students/male-student-reading-.jpg" alt="">
                                         </div>
                                         <div class="info-bx d-flex">
                                             <div>
@@ -547,7 +547,7 @@
                 </div>
 
                 <!-- Testimonials -->
-                <div class="section-area section-sp2 bg-fix ovbl-dark" style="background-image:url(assets/images/background/bg1.jpg);">
+                <!-- <div class="section-area section-sp2 bg-fix ovbl-dark" style="background-image:url(assets/images/background/bg1.jpg);">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12 text-white heading-bx left">
@@ -586,7 +586,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Testimonials END -->
 
                 <!-- Recent News -->
