--- a/about.html
+++ b/about.html
@@ -327,13 +327,13 @@
                     It is a long established fact that a reade.
                   </h5>
                   <p>
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown
-                    printer took a galley of type and scrambled it to make a
-                    type specimen book. It has survived not only five centuries,
-                    but also the leap into electronic typesetting, remaining
-                    essentially unchanged.
+                    The Redeemed Christian Bible college, being the brain-child
+                    of the present General Overseer, Pastor E.A. Adeboye was
+                    founded by the authority of the Redeemed Christian church of
+                    God in September 1980. The Church is registered under the
+                    Land (Perpetual Succession) of 1990. The College is at 1-5
+                    Redemption Way (formerly 1a. Cemetery) Street. Ebute-Meta
+                    Lagos Nigeria.
                   </p>
                   <a href="#" class="btn">Read More</a>
                 </div>
@@ -359,25 +359,25 @@
                   <div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
                     <div class="counter-style-1">
                       <div class="text-primary">
-                        <span class="counter">3000</span><span>+</span>
+                        <span class="counter">19</span>
                       </div>
-                      <span class="counter-text">Completed Projects</span>
+                      <span class="counter-text">Schools</span>
                     </div>
                   </div>
                   <div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
                     <div class="counter-style-1">
                       <div class="text-black">
-                        <span class="counter">2500</span><span>+</span>
+                        <span class="counter">8</span>
                       </div>
-                      <span class="counter-text">Happy Clients</span>
+                      <span class="counter-text">Departments</span>
                     </div>
                   </div>
                   <div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
                     <div class="counter-style-1">
                       <div class="text-primary">
-                        <span class="counter">1500</span><span>+</span>
+                        <span class="counter">41</span>
                       </div>
-                      <span class="counter-text">Questions Answered</span>
+                      <span class="counter-text">Courses</span>
                     </div>
                   </div>
                   <div class="col-lg-3 col-md-6 col-sm-6 col-6 m-b30">
@@ -385,7 +385,7 @@
                       <div class="text-black">
                         <span class="counter">1000</span><span>+</span>
                       </div>
-                      <span class="counter-text">Ordered Coffee's</span>
+                      <span class="counter-text">Campuses</span>
                     </div>
                   </div>
                 </div>
