--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
                           <i class="ti-home"></i><span class="counter">19</span>
                         </h3>
                       </div>
-                      <span class="cours-search-text">19 Courses.</span>
+                      <span class="cours-search-text">19 Schools.</span>
                     </div>
                   </div>
                   <div class="col-md-4 col-sm-6">
