udate on banners index about and contact us

--- a/about.html
+++ b/about.html
@@ -353,11 +353,10 @@
             <div class="row">
               <div class="col-md-12 heading-bx left">
                 <h2 class="title-head text-uppercase">
-                  what people <span>say</span>
+                  Voices of Impact: Testimonials<span></span>
                 </h2>
                 <p>
-                  It is a long established fact that a reader will be
-                  distracted by the readable content of a page
+                  Hear the Transformative Experiences and Influential Stories Shared by Our Community
                 </p>
               </div>
             </div>
@@ -368,16 +367,14 @@
                     <img src="assets/images/testimonials/pic1.jpg" alt="" />
                   </div>
                   <div class="testimonial-info">
-                    <h5 class="name">Peter Packer</h5>
-                    <p>-Art Director</p>
+                    <h5 class="name">Adedamola bola</h5>
+                    <p>Cisco</p>
                   </div>
                   <div class="testimonial-content">
                     <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry. Lorem Ipsum has been the
-                      industry's standard dummy text ever since the 1500s,
-                      when an unknown printer took a galley of type...
-                    </p>
+                      Studying Biblical Studies at RCBC was a profound intellectual and spiritual
+                      journey. The in-depth exploration of Bible doctrines and theology expanded
+                      my understanding of the Scriptures...
                   </div>
                 </div>
               </div>
@@ -387,15 +384,14 @@
                     <img src="assets/images/testimonials/pic2.jpg" alt="" />
                   </div>
                   <div class="testimonial-info">
-                    <h5 class="name">Peter Packer</h5>
-                    <p>-Art Director</p>
+                    <h5 class="name">Chidima Annabel</h5>
+                    <p>Postgraduate</p>
                   </div>
                   <div class="testimonial-content">
                     <p>
-                      Lorem Ipsum is simply dummy text of the printing and
-                      typesetting industry. Lorem Ipsum has been the
-                      industry's standard dummy text ever since the 1500s,
-                      when an unknown printer took a galley of type...
+                      Being part of the Missions and Outreach program at RCBC has been a profound
+                      experience. The college not only equipped me with the necessary skills for
+                      international missions but also instilled in me a deep sense ..
                     </p>
                   </div>
                 </div>
