--- a/contact.html
+++ b/contact.html
@@ -81,11 +81,13 @@
                             <a href="index.html"><img src="assets/images/REDEEMED.png" alt="" /></a>
                         </div>
                         <!-- Mobile Nav Button ==== -->
-                        <button class="navbar-toggler collapsed menuicon justify-content-end" type="button" data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
+                        <button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
+                            data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </button>
                         <!-- Author Nav ==== -->
                         <div class="secondary-menu">
                             <div class="secondary-inner">
@@ -102,8 +104,8 @@
                                     <!-- Search Button ==== -->
                                     <li class="search-btn">
                                         <button id="quik-search-btn" type="button" class="btn-link">
-                      <i class="fa fa-search"></i>
-                    </button>
+                                            <i class="fa fa-search"></i>
+                                        </button>
                                     </li>
                                 </ul>
                             </div>
@@ -111,7 +113,8 @@
                         <!-- Search Box ==== -->
                         <div class="nav-search-bar">
                             <form action="#">
-                                <input name="search" value="" type="text" class="form-control" placeholder="Type to search" />
+                                <input name="search" value="" type="text" class="form-control"
+                                    placeholder="Type to search" />
                                 <span><i class="ti-search"></i></span>
                             </form>
                             <span id="search-remove"><i class="ti-close"></i></span>
@@ -124,7 +127,8 @@
                             <ul class="nav navbar-nav">
                                 <li><a href="index.html">Home </a></li>
                                 <li><a href="about.html">About</a></li>
-                                <li class="add-mega-menu"><a href="javascript:;">Schools <i class="fa fa-chevron-down"></i></a>
+                                <li class="add-mega-menu"><a href="javascript:;">Schools <i
+                                            class="fa fa-chevron-down"></i></a>
                                     <ul class="sub-menu add-menu">
                                         <li class="add-menu-left">
                                             <h5 class="menu-adv-title">Schools</h5>
@@ -186,17 +190,18 @@
                                     Contact <span>Information</span>
                                 </h2>
                                 <p>
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                                    Connect With Us: Reach Out for Inquiries, Support, and Further Information.
                                 </p>
                                 <div class="widget widget_getintuch">
                                     <ul>
                                         <li>
-                                            <i class="ti-location-pin"></i>75k Newcastle St. Ponte Vedra Beach, FL 309382 New York
+                                            <i class="ti-location-pin"></i>75k Newcastle St. Ponte Vedra Beach, FL
+                                            309382 New York
                                         </li>
                                         <li>
-                                            <i class="ti-mobile"></i>0800-123456 (24/7 Support Line)
+                                            <i class="ti-mobile"></i>08030789185
                                         </li>
-                                        <li><i class="ti-email"></i>info@example.com</li>
+                                        <li><i class="ti-email"></i>enquiry@rcbc.edu.ng</li>
                                     </ul>
                                 </div>
                                 <h5 class="m-t0 m-b20">Follow Us</h5>
@@ -217,12 +222,13 @@
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-7">
-                            <form class="contact-bx ajax-form" action="http://educhamp.themetrades.com/demo/assets/script/contact.php">
+                            <form class="contact-bx ajax-form"
+                                action="http://educhamp.themetrades.com/demo/assets/script/contact.php">
                                 <div class="ajax-message"></div>
                                 <div class="heading-bx left">
                                     <h2 class="title-head">Get In <span>Touch</span></h2>
                                     <p>
-                                        It is a long established fact that a reader will be distracted by the readable content of a page
+                                        Stay Connected: Easily Reach Out and Get in Touch with Us
                                     </p>
                                 </div>
                                 <div class="row placeani">
@@ -230,7 +236,8 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <label>Your Name</label>
-                                                <input name="name" type="text" required class="form-control valid-character" />
+                                                <input name="name" type="text" required
+                                                    class="form-control valid-character" />
                                             </div>
                                         </div>
                                     </div>
@@ -246,7 +253,8 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <label>Your Phone</label>
-                                                <input name="phone" type="text" required class="form-control int-value" />
+                                                <input name="phone" type="text" required
+                                                    class="form-control int-value" />
                                             </div>
                                         </div>
                                     </div>
@@ -262,23 +270,29 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <label>Type Message</label>
-                                                <textarea name="message" rows="4" class="form-control" required></textarea>
+                                                <textarea name="message" rows="4" class="form-control"
+                                                    required></textarea>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="form-group">
                                             <div class="input-group">
-                                                <div class="g-recaptcha" data-sitekey="6Lf2gYwUAAAAAJLxwnZTvpJqbYFWqVyzE-8BWhVe" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback">
+                                                <div class="g-recaptcha"
+                                                    data-sitekey="6Lf2gYwUAAAAAJLxwnZTvpJqbYFWqVyzE-8BWhVe"
+                                                    data-callback="verifyRecaptchaCallback"
+                                                    data-expired-callback="expiredRecaptchaCallback">
                                                 </div>
-                                                <input class="form-control d-none" style="display: none" data-recaptcha="true" required data-error="Please complete the Captcha" />
+                                                <input class="form-control d-none" style="display: none"
+                                                    data-recaptcha="true" required
+                                                    data-error="Please complete the Captcha" />
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
                                         <button name="submit" type="submit" value="Submit" class="btn button-md">
-                      Send Message
-                    </button>
+                                            Send Message
+                                        </button>
                                     </div>
                                 </div>
                             </form>
@@ -296,7 +310,8 @@
                     <div class="container">
                         <div class="d-flex align-items-stretch">
                             <div class="pt-logo mr-auto">
-                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt="" width="30%" /></a>
+                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt=""
+                                        width="30%" /></a>
                             </div>
                             <!-- <div class="pt-social-link">
 							<ul class="list-inline m-a0">
@@ -321,12 +336,13 @@
                                     <form class="subscription-form" action="" method="post">
                                         <div class="ajax-message"></div>
                                         <div class="input-group">
-                                            <input name="email" required="required" class="form-control" placeholder="Your Email Address" type="email" />
+                                            <input name="email" required="required" class="form-control"
+                                                placeholder="Your Email Address" type="email" />
                                             <span class="input-group-btn">
-                        <button name="submit" value="Submit" type="submit" class="btn">
-                          <i class="fa fa-arrow-right"></i>
-                        </button>
-                      </span>
+                                                <button name="submit" value="Submit" type="submit" class="btn">
+                                                    <i class="fa fa-arrow-right"></i>
+                                                </button>
+                                            </span>
                                         </div>
                                     </form>
                                 </div>
@@ -371,28 +387,36 @@
                                 <h5 class="footer-title">Our Gallery</h5>
                                 <ul class="magnific-image">
                                     <li>
-                                        <a href="assets/images/gallery/pic1.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic1.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic1.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic1.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic2.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic2.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic2.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic2.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic3.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic3.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic3.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic3.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic4.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic4.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic4.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic4.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic5.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic5.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic5.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic5.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic6.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic6.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic6.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic6.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic7.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic7.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic8.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img
+                                                src="assets/images/gallery/pic8.jpg" alt="" /></a>
                                     </li>
                                 </ul>
                             </div>
@@ -406,7 +430,7 @@
                         <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                             © Copyright 2023. All Rights Reserved. |
                             <a target="_blank" href="https://www.templateshub.net">
-                By CodesPro Solutions</a>
+                                By CodesPro Solutions</a>
                         </div>
                     </div>
                 </div>
