--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
 						<div class="row">
 							<div class="col-md-12 text-white heading-bx left">
 								<h2 class="title-head text-uppercase">
-									Voices of Impact: Testimonials<span>say</span>
+									Voices of Impact: Testimonials<span></span>
 								</h2>
 								<p>
 									Hear the Transformative Experiences and Influential Stories Shared by Our Community
