update school nav

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,11 @@
     <meta name="robots" content="" />
 
     <!-- DESCRIPTION -->
-    <meta name="description" content="Redeemed : Christian Bible College: College Portal" />
+    <meta name="description" content="Redeemed  Christian Bible College College Portal" />
 
     <!-- OG -->
-    <meta property="og:title" content="Redeemed : Christian Bible College: College Portal" />
-    <meta property="og:description" content="Redeemed : Christian Bible College: College Portal" />
+    <meta property="og:title" content="Redeemed  Christian Bible College College Portal" />
+    <meta property="og:description" content="Redeemed  Christian Bible College College Portal" />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no" />
 
@@ -23,7 +23,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
 
     <!-- PAGE TITLE HERE ============================================= -->
-    <title>Redeemed : Christian Bible College: College Portal</title>
+    <title>Redeemed Christian Bible College College Portal</title>
 
     <!-- MOBILE SPECIFIC ============================================= -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -606,10 +606,10 @@
                                 </div>
                                 <div class="col-4 col-lg-4 col-md-4 col-sm-4">
                                     <div class="widget footer_widget">
-                                        <h5 class="footer-title">Courses</h5>
+                                        <h5 class="footer-title">Schools</h5>
                                         <ul>
-                                            <li><a href="courses.html">Courses</a></li>
-                                            <li><a href="courses-details.html">Details</a></li>
+                                            <li><a href="schools.html">Schools</a></li>
+                                            <li><a href="courses.html">Details</a></li>
                                         </ul>
                                     </div>
                                 </div>
