--- a/blog-details.html
+++ b/blog-details.html
@@ -10,11 +10,11 @@
     <meta name="robots" content="" />
 
     <!-- DESCRIPTION -->
-    <meta name="description" content="Redeemed : Christian Bible College: College Portal" />
+    <meta name="description" content="Redeemed Christian Bible College College Portal" />
 
     <!-- OG -->
-    <meta property="og:title" content="Redeemed : Christian Bible College: College Portal" />
-    <meta property="og:description" content="Redeemed : Christian Bible College: College Portal" />
+    <meta property="og:title" content="Redeemed Christian Bible College College Portal" />
+    <meta property="og:description" content="Redeemed Christian Bible College College Portal" />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no" />
 
@@ -23,28 +23,28 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
 
     <!-- PAGE TITLE HERE ============================================= -->
-    <title>Redeemed : Christian Bible College: College Portal</title>
+    <title>Redeemed Christian Bible College College Portal/title>
 
-    <!-- MOBILE SPECIFIC ============================================= -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- MOBILE SPECIFIC ============================================= -->
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!--[if lt IE 9]>
+        <!--[if lt IE 9]>
       <script src="assets/js/html5shiv.min.js"></script>
       <script src="assets/js/respond.min.js"></script>
     <![endif]-->
 
-    <!-- All PLUGINS CSS ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/assets.css" />
+        <!-- All PLUGINS CSS ============================================= -->
+        <link rel="stylesheet" type="text/css" href="assets/css/assets.css" />
 
-    <!-- TYPOGRAPHY ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/typography.css" />
+        <!-- TYPOGRAPHY ============================================= -->
+        <link rel="stylesheet" type="text/css" href="assets/css/typography.css" />
 
-    <!-- SHORTCODES ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/shortcodes/shortcodes.css" />
+        <!-- SHORTCODES ============================================= -->
+        <link rel="stylesheet" type="text/css" href="assets/css/shortcodes/shortcodes.css" />
 
-    <!-- STYLESHEETS ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" />
+        <!-- STYLESHEETS ============================================= -->
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+        <link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" />
 </head>
 
 <body id="bg">
@@ -769,10 +769,10 @@
                                 </div>
                                 <div class="col-4 col-lg-4 col-md-4 col-sm-4">
                                     <div class="widget footer_widget">
-                                        <h5 class="footer-title">Courses</h5>
+                                        <h5 class="footer-title">Schools</h5>
                                         <ul>
-                                            <li><a href="courses.html">Courses</a></li>
-                                            <li><a href="courses-details.html">Details</a></li>
+                                            <li><a href="schools.html">Schools</a></li>
+                                            <li><a href="courses.html">Details</a></li>
                                         </ul>
                                     </div>
                                 </div>
