--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,11 @@
     <meta name="robots" content="" />
 
     <!-- DESCRIPTION -->
-    <meta name="description" content="Redeemed : Christian Bible College: College Portal" />
+    <meta name="description" content="Redeemed Christian Bible College College Portal" />
 
     <!-- OG -->
-    <meta property="og:title" content="Redeemed : Christian Bible College: College Portal" />
-    <meta property="og:description" content="Redeemed : Christian Bible College: College Portal" />
+    <meta property="og:title" content="Redeemed Christian Bible College College Portal />
+    <meta property=" og:description " content="Redeemed Christian Bible College College Portal />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no" />
 
@@ -23,28 +23,28 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
 
     <!-- PAGE TITLE HERE ============================================= -->
-    <title>Redeemed : Christian Bible College: College Portal</title>
+    <title>Redeemed Christian Bible College College Portaltitle>
 
-    <!-- MOBILE SPECIFIC ============================================= -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- MOBILE SPECIFIC ============================================= -->
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!--[if lt IE 9]>
+        <!--[if lt IE 9]>
       <script src="assets/js/html5shiv.min.js"></script>
       <script src="assets/js/respond.min.js"></script>
     <![endif]-->
 
-    <!-- All PLUGINS CSS ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/assets.css" />
+        <!-- All PLUGINS CSS ============================================= -->
+        <link rel="stylesheet" type="text/css" href="assets/css/assets.css" />
 
-    <!-- TYPOGRAPHY ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/typography.css" />
+        <!-- TYPOGRAPHY ============================================= -->
+        <link rel="stylesheet" type="text/css" href="assets/css/typography.css" />
 
-    <!-- SHORTCODES ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/shortcodes/shortcodes.css" />
+        <!-- SHORTCODES ============================================= -->
+        <link rel="stylesheet" type="text/css" href="assets/css/shortcodes/shortcodes.css" />
 
-    <!-- STYLESHEETS ============================================= -->
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
-    <link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" />
+        <!-- STYLESHEETS ============================================= -->
+        <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
+        <link class="skin" rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" />
 </head>
 
 <body id="bg">
@@ -81,9 +81,7 @@
                             <a href="index.html"><img src="assets/images/REDEEMED.png" alt="" /></a>
                         </div>
                         <!-- Mobile Nav Button ==== -->
-                        <button class="navbar-toggler collapsed menuicon justify-content-end" type="button"
-                            data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown"
-                            aria-expanded="false" aria-label="Toggle navigation">
+                        <button class="navbar-toggler collapsed menuicon justify-content-end" type="button" data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown" aria-expanded="false" aria-label="Toggle navigation">
                             <span></span>
                             <span></span>
                             <span></span>
@@ -113,8 +111,7 @@
                         <!-- Search Box ==== -->
                         <div class="nav-search-bar">
                             <form action="#">
-                                <input name="search" value="" type="text" class="form-control"
-                                    placeholder="Type to search" />
+                                <input name="search" value="" type="text" class="form-control" placeholder="Type to search" />
                                 <span><i class="ti-search"></i></span>
                             </form>
                             <span id="search-remove"><i class="ti-close"></i></span>
@@ -134,7 +131,7 @@
                                             <h5 class="menu-adv-title">Schools</h5>
                                             <ul>
                                                 <li><a href="schools.html">Schools </a></li>
-                                                <li><a href="courses-details.html">Courses</a></li>
+                                                <li><a href="courses.html">Courses</a></li>
                                             </ul>
                                         </li>
                                         <li class="add-menu-right">
@@ -195,8 +192,7 @@
                                 <div class="widget widget_getintuch">
                                     <ul>
                                         <li>
-                                            <i class="ti-location-pin"></i>75k Newcastle St. Ponte Vedra Beach, FL
-                                            309382 New York
+                                            <i class="ti-location-pin"></i>75k Newcastle St. Ponte Vedra Beach, FL 309382 New York
                                         </li>
                                         <li>
                                             <i class="ti-mobile"></i>08030789185
@@ -222,8 +218,7 @@
                             </div>
                         </div>
                         <div class="col-lg-7 col-md-7">
-                            <form class="contact-bx ajax-form"
-                                action="http://educhamp.themetrades.com/demo/assets/script/contact.php">
+                            <form class="contact-bx ajax-form" action="http://educhamp.themetrades.com/demo/assets/script/contact.php">
                                 <div class="ajax-message"></div>
                                 <div class="heading-bx left">
                                     <h2 class="title-head">Get In <span>Touch</span></h2>
@@ -236,8 +231,7 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <label>Your Name</label>
-                                                <input name="name" type="text" required
-                                                    class="form-control valid-character" />
+                                                <input name="name" type="text" required class="form-control valid-character" />
                                             </div>
                                         </div>
                                     </div>
@@ -253,8 +247,7 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <label>Your Phone</label>
-                                                <input name="phone" type="text" required
-                                                    class="form-control int-value" />
+                                                <input name="phone" type="text" required class="form-control int-value" />
                                             </div>
                                         </div>
                                     </div>
@@ -270,22 +263,16 @@
                                         <div class="form-group">
                                             <div class="input-group">
                                                 <label>Type Message</label>
-                                                <textarea name="message" rows="4" class="form-control"
-                                                    required></textarea>
+                                                <textarea name="message" rows="4" class="form-control" required></textarea>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-lg-12">
                                         <div class="form-group">
                                             <div class="input-group">
-                                                <div class="g-recaptcha"
-                                                    data-sitekey="6Lf2gYwUAAAAAJLxwnZTvpJqbYFWqVyzE-8BWhVe"
-                                                    data-callback="verifyRecaptchaCallback"
-                                                    data-expired-callback="expiredRecaptchaCallback">
+                                                <div class="g-recaptcha" data-sitekey="6Lf2gYwUAAAAAJLxwnZTvpJqbYFWqVyzE-8BWhVe" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback">
                                                 </div>
-                                                <input class="form-control d-none" style="display: none"
-                                                    data-recaptcha="true" required
-                                                    data-error="Please complete the Captcha" />
+                                                <input class="form-control d-none" style="display: none" data-recaptcha="true" required data-error="Please complete the Captcha" />
                                             </div>
                                         </div>
                                     </div>
@@ -310,8 +297,7 @@
                     <div class="container">
                         <div class="d-flex align-items-stretch">
                             <div class="pt-logo mr-auto">
-                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt=""
-                                        width="30%" /></a>
+                                <a href="index.html"><img src="assets/images/REDEEMED-light.png" alt="" width="30%" /></a>
                             </div>
                             <!-- <div class="pt-social-link">
 							<ul class="list-inline m-a0">
@@ -336,8 +322,7 @@
                                     <form class="subscription-form" action="" method="post">
                                         <div class="ajax-message"></div>
                                         <div class="input-group">
-                                            <input name="email" required="required" class="form-control"
-                                                placeholder="Your Email Address" type="email" />
+                                            <input name="email" required="required" class="form-control" placeholder="Your Email Address" type="email" />
                                             <span class="input-group-btn">
                                                 <button name="submit" value="Submit" type="submit" class="btn">
                                                     <i class="fa fa-arrow-right"></i>
@@ -373,10 +358,10 @@
                                 </div>
                                 <div class="col-4 col-lg-4 col-md-4 col-sm-4">
                                     <div class="widget footer_widget">
-                                        <h5 class="footer-title">Courses</h5>
+                                        <h5 class="footer-title">Schools</h5>
                                         <ul>
-                                            <li><a href="courses.html">Courses</a></li>
-                                            <li><a href="courses-details.html">Details</a></li>
+                                            <li><a href="schools.html">Schools</a></li>
+                                            <li><a href="courses.html">Details</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -387,36 +372,28 @@
                                 <h5 class="footer-title">Our Gallery</h5>
                                 <ul class="magnific-image">
                                     <li>
-                                        <a href="assets/images/gallery/pic1.jpg" class="magnific-anchor"><img
-                                                src="assets/images/gallery/pic1.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic1.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic1.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic2.jpg" class="magnific-anchor"><img
-                                                src="assets/images/gallery/pic2.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic2.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic2.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic3.jpg" class="magnific-anchor"><img
-                                                src="assets/images/gallery/pic3.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic3.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic3.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic4.jpg" class="magnific-anchor"><img
-                                                src="assets/images/gallery/pic4.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic4.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic4.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic5.jpg" class="magnific-anchor"><img
-                                                src="assets/images/gallery/pic5.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic5.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic5.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic6.jpg" class="magnific-anchor"><img
-                                                src="assets/images/gallery/pic6.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic6.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic6.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img
-                                                src="assets/images/gallery/pic7.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic7.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic7.jpg" alt="" /></a>
                                     </li>
                                     <li>
-                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img
-                                                src="assets/images/gallery/pic8.jpg" alt="" /></a>
+                                        <a href="assets/images/gallery/pic8.jpg" class="magnific-anchor"><img src="assets/images/gallery/pic8.jpg" alt="" /></a>
                                     </li>
                                 </ul>
                             </div>
