--- a/forget-password.html
+++ b/forget-password.html
@@ -10,11 +10,11 @@
     <meta name="robots" content="" />
 
     <!-- DESCRIPTION -->
-    <meta name="description" content="Redeemed : Christian Bible College: College Portal" />
+    <meta name="description" content="Redeemed  Christian Bible College College Portal" />
 
     <!-- OG -->
-    <meta property="og:title" content="Redeemed : Christian Bible College: College Portal" />
-    <meta property="og:description" content="Redeemed : Christian Bible College: College Portal" />
+    <meta property="og:title" content="Redeemed  Christian Bible College College Portal" />
+    <meta property="og:description" content="Redeemed  Christian Bible College College Portal" />
     <meta property="og:image" content="" />
     <meta name="format-detection" content="telephone=no" />
 
@@ -23,7 +23,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
 
     <!-- PAGE TITLE HERE ============================================= -->
-    <title>Redeemed : Christian Bible College: College Portal</title>
+    <title>Redeemed Christian Bible College College Portal</title>
 
     <!-- MOBILE SPECIFIC ============================================= -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
