--- a/schools.html
+++ b/schools.html
@@ -52,15 +52,21 @@
         <div id="loading-icon-bx"></div>
 
         <!-- Header Top ==== -->
-        <header class="header rs-nav">
+        <header class="header rs-nav header-transparent">
             <div class="top-bar">
                 <div class="container">
                     <div class="row d-flex justify-content-between">
                         <div class="topbar-left">
                             <ul>
-                                <li><a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a></li>
-                                <li><a href="javascript:;"><i class="fa fa-envelope-o"></i>enquiry@rcbc.edu.ng</a></li>
-                                <li><a href="javascript:;"><i class="fa fa-phone"></i>08030789185</a></li>
+                                <li>
+                                    <a href="faq-1.html"><i class="fa fa-question-circle"></i>Ask a Question</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;"><i class="fa fa-envelope-o"></i>enquiry@rcbc.edu.ng</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:;"><i class="fa fa-phone"></i>08030789185</a>
+                                </li>
                             </ul>
                         </div>
                         <div class="topbar-right">
@@ -78,14 +84,18 @@
                     <div class="container clearfix">
                         <!-- Header Logo ==== -->
                         <div class="menu-logo">
-                            <a href="index.html"><img src="assets/images/REDEEMED.png" alt="" /></a>
+                            <a href="index.html"><img src="assets/images/REDEEMED.png" alt="" style="
+                      filter: drop-shadow(2px, 3px, 4px #ccc);
+                      padding: 10px;
+                      border-radius: 10px;
+                    " /></a>
                         </div>
                         <!-- Mobile Nav Button ==== -->
                         <button class="navbar-toggler collapsed menuicon justify-content-end" type="button" data-toggle="collapse" data-target="#menuDropdown" aria-controls="menuDropdown" aria-expanded="false" aria-label="Toggle navigation">
-              <span></span>
-              <span></span>
-              <span></span>
-            </button>
+							<span></span>
+							<span></span>
+							<span></span>
+						</button>
                         <!-- Author Nav ==== -->
                         <div class="secondary-menu">
                             <div class="secondary-inner">
@@ -94,16 +104,16 @@
                                         <a href="javascript:;" class="btn-link"><i class="fa fa-facebook"></i></a>
                                     </li>
                                     <li>
-                                        <a href="javascript:;" class="btn-link"><i class="fa fa-google-plus"></i></a>
+                                        <a href="javascript:;" class="btn-link"><i class="fa fa-youtube"></i></a>
                                     </li>
                                     <li>
-                                        <a href="javascript:;" class="btn-link"><i class="fa fa-linkedin"></i></a>
+                                        <a href="javascript:;" class="btn-link"><i class="fa fa-instagram"></i></a>
                                     </li>
                                     <!-- Search Button ==== -->
                                     <li class="search-btn">
                                         <button id="quik-search-btn" type="button" class="btn-link">
-                      <i class="fa fa-search"></i>
-                    </button>
+											<i class="fa fa-search"></i>
+										</button>
                                     </li>
                                 </ul>
                             </div>
@@ -124,13 +134,14 @@
                             <ul class="nav navbar-nav">
                                 <li class="active"><a href="index.html">Home </a></li>
                                 <li><a href="about.html">About</a></li>
-                                <li class="add-mega-menu"><a href="javascript:;">Schools <i class="fa fa-chevron-down"></i></a>
+                                <li class="add-mega-menu">
+                                    <a href="javascript:;">Schools <i class="fa fa-chevron-down"></i></a>
                                     <ul class="sub-menu add-menu">
                                         <li class="add-menu-left">
                                             <h5 class="menu-adv-title">Schools</h5>
                                             <ul>
                                                 <li><a href="schools.html">Schools </a></li>
-                                                <li><a href="courses.html">Courses</a></li>
+                                                <li><a href="courses-details.html">Courses</a></li>
                                             </ul>
                                         </li>
                                         <li class="add-menu-right">
@@ -145,8 +156,8 @@
                             </ul>
                             <div class="nav-social-link">
                                 <a href="javascript:;"><i class="fa fa-facebook"></i></a>
-                                <a href="javascript:;"><i class="fa fa-google-plus"></i></a>
-                                <a href="javascript:;"><i class="fa fa-linkedin"></i></a>
+                                <a href="javascript:;"><i class="fa fa-youtube"></i></a>
+                                <a href="javascript:;"><i class="fa fa-instagram"></i></a>
                             </div>
                         </div>
                         <!-- Navigation Menu END ==== -->
